Fix for icons not showing up on info graphic in gas track

--- a/assets/css/reece-gas-track.css
+++ b/assets/css/reece-gas-track.css
@@ -211,7 +211,7 @@
   .gt-ig-scan,
   .gt-ig-screen,
   .gt-ig-truck {
-    background-image: url("../images/gastrack_2013/gas-track-infographic-spritex2.png-new");
+    background-image: url("../images/gastrack_2013/gas-track-infographic-spritex2.png");
     -webkit-background-size: 328px 204px;
     -moz-background-size: 328px 204px;
     -o-background-size: 328px 204px;
